Gettext translations complete

--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -26,47 +26,47 @@
 
       <div class="mt-8 bg-white shadow-lg rounded-xl p-6 md:p-10 dark:bg-gray-800 dark:text-gray-200">
         <h2 class="text-2xl font-semibold text-center text-gray-700 dark:text-white">
-          Programming Languages
+          {gettext("Programming Languages")}
         </h2>
         <ol class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4 text-center">
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">Python</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("Python")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">JavaScript</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("JavaScript")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">Java</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("Java")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">C</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("C")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">R</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("R")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">Haskell</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("Haskell")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">Prolog</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("Prolog")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">C#</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("C#")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">C++</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("C++")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">PHP</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("PHP")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">RISC-V</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("RISC-V")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">HTML</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("HTML")}</span>
           </li>
           <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-            <span class="font-semibold text-blue-900 dark:text-gray-300">CSS</span>
+            <span class="font-semibold text-blue-900 dark:text-gray-300">{gettext("CSS")}</span>
           </li>
         </ol>
       </div>
