--- a/lib/app_web/controllers/planet_html/list.html.heex
+++ b/lib/app_web/controllers/planet_html/list.html.heex
@@ -9,15 +9,15 @@
   </nav> --%>
 
 <div class="overflow-x-auto">
-  <h2 class="text-2xl font-semibold text-gray-800 mb-4 dark:text-gray-100">All Planets' Details</h2>
+  <h2 class="text-2xl font-semibold text-gray-800 mb-4 dark:text-gray-100">{gettext("All Planets' Details")}</h2>
   <table class="min-w-full table-auto text-sm text-left text-gray-500 dark:text-gray-400">
     <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700
     dark:text-gray-300">
       <tr>
-        <th class="px-6 py-3">ID</th>
-        <th class="px-6 py-3">Name</th>
-        <th class="px-6 py-3">Distance to Sun</th>
-        <th class="px-6 py-3">Orbital Period</th>
+        <th class="px-6 py-3">{gettext("ID")}</th>
+        <th class="px-6 py-3">{gettext("Name")}</th>
+        <th class="px-6 py-3">{gettext("Distance to Sun")}</th>
+        <th class="px-6 py-3">{gettext("Orbital Period")}</th>
       </tr>
     </thead>
     <tbody>
