--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -83,14 +83,11 @@
 
 <.modal id="contact-modal" heading="Contact us" backdrop="static">
  <.simple_form :let={f} for={@message_changeset} action={~p"/messages"} class="mb-6">
-  <%!-- <.error :if={@message_changeset.action}>
-    Oops, something went wrong! Please check the errors below.
-  </.error> --%>
   <.input field={f[:email]} class="dark:text-white" type="text" label="Email" />
   <.input field={f[:subject]} class="dark:text-white" type="text" label="Subject" />
   <.input field={f[:message]} class="dark:text-white" type="text" label="Message" />
   <:actions>
-    <.button type="submit" color="alternative"> Save Message </.button>
+    <.button type="submit" color="alternative"> {gettext("Save Message")} </.button>
   </:actions>
 </.simple_form>
 </.modal>
