--- a/lib/app_web/live/item_live/index.html.heex
+++ b/lib/app_web/live/item_live/index.html.heex
@@ -1,8 +1,8 @@
 <.header>
-  Listing Items
+  {gettext("Listing Items")}
   <:actions>
     <.link patch={~p"/items/new"}>
-      <.button>New Item</.button>
+      <.button>{gettext("New Item")}</.button>
     </.link>
   </:actions>
 </.header>
@@ -13,21 +13,19 @@
   row_click={fn {_id, item} -> JS.navigate(~p"/items/#{item}") end}
 >
   <:col :let={{_id, item}} label="Name">{item.name}</:col>
-  <%!-- <:col :let={{_id, item}} label="Attributes">{item.attributes}</:col> --%>
-
   <:col :let={{_id, item}} label="Attributes">{attribute_count(item)}</:col>
   <:action :let={{_id, item}}>
     <div class="sr-only">
-      <.link navigate={~p"/items/#{item}"}>Show</.link>
+      <.link navigate={~p"/items/#{item}"}>{gettext("Show")}</.link>
     </div>
-    <.link patch={~p"/items/#{item}/edit"}>Edit</.link>
+    <.link patch={~p"/items/#{item}/edit"}>{gettext("Edit")}</.link>
   </:action>
   <:action :let={{id, item}}>
     <.link
       phx-click={JS.push("delete", value: %{id: item.id}) |> hide("##{id}")}
       data-confirm="Are you sure?"
     >
-      Delete
+      {gettext("Delete")}
     </.link>
   </:action>
 </.table>
