--- a/lib/app_web/live/item_live/show.html.heex
+++ b/lib/app_web/live/item_live/show.html.heex
@@ -1,19 +1,15 @@
 <.header>
-  Item {@item.id}
-  <:subtitle>This is a item record from your database.</:subtitle>
+  {gettext("Item")} {@item.id}
+  <:subtitle>{gettext("This is a item record from your database.")}</:subtitle>
   <:actions>
     <.link patch={~p"/items/#{@item}/show/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit item</.button>
+      <.button>{gettext("Edit item")}</.button>
     </.link>
   </:actions>
 </.header>
 
 <.list>
   <:item title="Name">{@item.name}</:item>
-  <%!-- <:item title="Attributes">
-  <div data-attributes={Jason.encode!(@item.attributes)}></div>
-  <%!-- {@item.attributes} --%>
-  <%!-- </:item> --%> --%>
   <:item title="Attributes">
     <!-- Check if attributes is a map, then display a calculated value -->
     <%= if is_map(@item.attributes) do %>
@@ -22,12 +18,12 @@
         if value, do: acc + 1, else: acc
       end) %>
     <% else %>
-      <span>Invalid attributes format</span>
+      <span>{gettext("Invalid attributes format")}</span>
     <% end %>
   </:item>
 </.list>
 
-<.back navigate={~p"/items"}>Back to items</.back>
+<.back navigate={~p"/items"}>{gettext("Back to items")}</.back>
 
 <.modal :if={@live_action == :edit} id="item-modal" show on_cancel={JS.patch(~p"/items/#{@item}")}>
   <.live_component
