--- a/lib/app_web/live/topic_live/show.html.heex
+++ b/lib/app_web/live/topic_live/show.html.heex
@@ -1,12 +1,12 @@
 <.header>
-  Topic {@topic.id}
-  <:subtitle>This is a topic record from your database.</:subtitle>
+  {gettext("Topic")} {@topic.id}
+  <:subtitle>{gettext("This is a topic record from your database.")}</:subtitle>
   <:actions>
     <.link patch={~p"/topics/#{@topic.slug}/edit"} phx-click={JS.push_focus()}>
-      <.button color="alternative">Edit topic</.button>
+      <.button color="alternative">{gettext("Edit topic")}</.button>
     </.link>
     <.link patch={~p"/topics/#{@topic.slug}/pages"}>
-      <.button color="alternative">View Pages</.button>
+      <.button color="alternative">{gettext("View Pages")}</.button>
     </.link>
   </:actions>
 </.header>
@@ -16,7 +16,7 @@
   <:item title="Title">{@topic.title}</:item>
 </.list>
 
-<.back navigate={~p"/topics"}>Back to topics</.back>
+<.back navigate={~p"/topics"}>{gettext("Back to topics")}</.back>
 
 <.modal
   :if={@live_action == :edit}
