Think I translated every page....

--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -81,11 +81,11 @@
   </div>
 </main>
 
-<.modal id="contact-modal" heading="Contact us" backdrop="static">
+<.modal id="contact-modal" heading={gettext("Contact us")} backdrop="static">
  <.simple_form :let={f} for={@message_changeset} action={~p"/messages"} class="mb-6">
-  <.input field={f[:email]} class="dark:text-white" type="text" label="Email" />
-  <.input field={f[:subject]} class="dark:text-white" type="text" label="Subject" />
-  <.input field={f[:message]} class="dark:text-white" type="text" label="Message" />
+  <.input field={f[:email]} class="dark:text-white" type="text" label={gettext("Email")} />
+  <.input field={f[:subject]} class="dark:text-white" type="text" label={gettext("Subject")} />
+  <.input field={f[:message]} class="dark:text-white" type="text" label={gettext("Message")} />
   <:actions>
     <.button type="submit" color="alternative"> {gettext("Save Message")} </.button>
   </:actions>
