--- a/lib/app_web/controllers/message_html/new.html.heex
+++ b/lib/app_web/controllers/message_html/new.html.heex
@@ -1,11 +1,11 @@
 <div class="dark:bg-gray-900 dark:text-white p-6">
   <.header>
     <div class="dark:text-white">
-      New Message
+      {gettext("New Message")}
     </div>
   <:subtitle>
     <div class="dark:text-white">
-      Use this form to manage message records in your database.
+      {gettext("Use this form to manage message records in your database.")}
     </div>
   <br>
   </:subtitle>
@@ -15,7 +15,7 @@
 
   <.back navigate={~p"/messages"}>
     <div class="dark:text-white">
-      Back to messages
+      {gettext("Back to messages")}
     </div></.back>
 </div>
 
