--- a/lib/app_web/live/page_live/index.html.heex
+++ b/lib/app_web/live/page_live/index.html.heex
@@ -12,7 +12,7 @@
   rows={@streams.pages}
   row_click={fn {_id, page} -> JS.navigate(~p"/topics/#{@topic.slug}/pages/#{page.id || :new}") end}
 >
-  <:col :let={{_id, page}} label="Content">{page.content}</:col>
+  <:col :let={{_id, page}} label={gettext("Content")}>{page.content}</:col>
 
   <:action :let={{_id, page}}>
     <div class="sr-only">
@@ -23,7 +23,7 @@
   <:action :let={{id, page}}>
     <.link
       phx-click={JS.push("delete", value: %{id: page.id}) |> hide("##{id}")}
-      data-confirm="Are you sure?"
+      data-confirm={gettext("Are you sure?")}
     >
       {gettext("Delete")}
     </.link>
