--- a/lib/app_web/live/topic_live/index.html.heex
+++ b/lib/app_web/live/topic_live/index.html.heex
@@ -12,8 +12,8 @@
   rows={@streams.topics}
   row_click={fn {_id, topic} -> JS.navigate(~p"/topics/#{topic.slug}") end}
 >
-  <:col :let={{_id, topic}} label="Slug">{topic.slug}</:col>
-  <:col :let={{_id, topic}} label="Title">{topic.title}</:col>
+  <:col :let={{_id, topic}} label={gettext("Slug")}>{topic.slug}</:col>
+  <:col :let={{_id, topic}} label={gettext("Title")}>{topic.title}</:col>
   <:action :let={{_id, topic}}>
     <div class="sr-only">
       <.link navigate={~p"/topics/#{topic.slug}"}>{gettext("Show")}</.link>
@@ -24,7 +24,7 @@
     <.link
       class="dark:text-white"
       phx-click={JS.push("delete", value: %{slug: topic.slug}) |> hide("##{slug}")}
-      data-confirm="Are you sure?"
+      data-confirm={gettext("Are you sure?")}
     >
       {gettext("Delete")}
     </.link>
