--- a/lib/app_web/live/topic_live/show.html.heex
+++ b/lib/app_web/live/topic_live/show.html.heex
@@ -12,8 +12,8 @@
 </.header>
 
 <.list>
-  <:item title="Slug">{@topic.slug}</:item>
-  <:item title="Title">{@topic.title}</:item>
+  <:item title={gettext("Slug")}>{@topic.slug}</:item>
+  <:item title={gettext("Title")}>{@topic.title}</:item>
 </.list>
 
 <.back navigate={~p"/topics"}>{gettext("Back to topics")}</.back>
