Accessibility assignment complete

--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -12,7 +12,7 @@
       <div class="bg-white shadow-lg rounded-xl p-6 md:p-10 text-center dark:bg-gray-800 dark:text-gray-200">
         <img
           src={~p"/images/SeniorPortrait.jpg"}
-          alt="High school senior portrait of Ashley Albert"
+          alt="High school senior portrait of Ashley Albert. Ashley is seen smiling with dark blonde hair, pale skin, and is wearing a gold cross necklace with a black off the shoulder drape."
           class="w-48 h-48 mx-auto rounded-full border-4 border-gray-300 shadow-md object-cover
            dark:border-gray-500"
         />
