--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -27,7 +27,11 @@
 
 <nav class="bg-gray-800 p-4 dark:bg-gray-300">
   <div class="container mx-auto flex justify-between items-center">
-    <h1 class="text-white text-xl font-bold dark:text-black">Ashley Albert</h1>
+    <h1 class="text-white text-xl font-bold dark:text-black" tabindex="1">Ashley Albert</h1>
+
+    <a href="#main-content" class="sr-only focus:not-sr-only text-white dark:text-black">
+    Skip to main content
+    </a>
 
     <%!-- dark mode --%>
     <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
@@ -74,7 +78,7 @@
   </div>
 </nav>
 
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main id="main-content" class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     {@inner_content}
