--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -74,6 +74,7 @@
         </svg>
       </button>
         <.language_toggle locale={@locale} />
+         <.icon name="8-ball" />
     </div>
   </div>
 </nav>
