Removing problematic code

--- a/lib/app_web/controllers/course_html/index.html.heex
+++ b/lib/app_web/controllers/course_html/index.html.heex
@@ -14,7 +14,7 @@
     <div>
       <.link navigate={~p"/courses/#{course}"}>Show</.link>
     </div>
-    <.link navigate={~p"/courses/#{course}/edit"}>Edit</.link>
+    <%!-- <.link navigate={~p"/courses/#{course}/edit"}>Edit</.link> --%>
   </:action>
   <:action :let={course}>
     <.link href={~p"/courses/#{course}"} method="delete" data-confirm="Are you sure?">
