--- a/lib/app_web/controllers/course_html/show.html.heex
+++ b/lib/app_web/controllers/course_html/show.html.heex
@@ -2,9 +2,9 @@
   Course {@course.id}
   <:subtitle>This is a course record from your database.</:subtitle>
   <:actions>
-    <.link href={~p"/courses/#{@course}/edit"}>
+    <%!-- <.link href={~p"/courses/#{@course}/edit"}> --%>
       <.button>Edit course</.button>
-    </.link>
+    <%!-- </.link> --%>
   </:actions>
 </.header>
 
