Trying to do Wednesday's assignment

--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -9,7 +9,7 @@
     <%!-- dark mode --%>
     <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
       <%!-- navbar --%>
-      <.navbar current_user={@current_user}/>
+      <.navbar user_id={@user_id}/>
 
       <button
         type="button"
