Fixed Tab Order

--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -1,11 +1,9 @@
 <nav class="bg-gray-800 p-4 dark:bg-gray-300">
   <div class="container mx-auto flex justify-between items-center">
     <h1 class="text-white text-xl font-bold dark:text-black" tabindex="1">Ashley Albert</h1>
-
-    <a href="#main-content" class="sr-only focus:not-sr-only text-white dark:text-black">
-    Skip to main content
+    <a href="#main-content" tabindex="1" class="sr-only focusable focus:not-sr-only text-white dark:text-black">
+      Skip to main content
     </a>
-
     <%!-- dark mode --%>
     <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
       <%!-- navbar --%>
