--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -1,9 +1,12 @@
 <nav class="bg-gray-800 p-4 dark:bg-gray-300">
   <div class="container mx-auto flex justify-between items-center">
-    <h1 class="text-white text-xl font-bold dark:text-black" tabindex="1">Ashley Albert</h1>
-    <a href="#main-content" tabindex="1" class="sr-only focusable focus:not-sr-only text-white dark:text-black">
-      Skip to main content
+    <img src={~p"/images/final/cuesphere-dark.png"} alt={gettext("Cuesphere Logo")} class="w-40 h-auto object-contain block dark:hidden" />
+    <img src={~p"/images/final/cuesphere-light.png"} alt={gettext("Cuesphere Logo")} class="w-40 h-auto object-contain hidden dark:block" />
+
+    <a href="#main-content" class="sr-only focus:not-sr-only text-white dark:text-black">
+    Skip to main content
     </a>
+
     <%!-- dark mode --%>
     <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
       <%!-- navbar --%>
@@ -45,13 +48,14 @@
         </svg>
       </button>
         <.language_toggle locale={@locale} />
-         <.icon name="8-ball" />
+         <%!-- <.icon name="8-ball" /> --%>
     </div>
   </div>
 </nav>
 
 <main id="main-content" class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
+  <%!-- <div class="mx-auto max-w-2xl"> --%>
+  <div class="mx-auto max-w-4xl">
     <.flash_group flash={@flash} />
     {@inner_content}
   </div>
